[package]

name = "game2048"
description = "2048 game in Rust"
repository = "https://github.com/andelf/rust-2048"
version = "0.0.3"
license = "MIT"
authors = [ "ShuYu Wang <andelf@gmail.com>" ]
keywords = [ "game", "2048", "SDL2" ]

[[bin]]

name = "game2048"
path = "src/main.rs"

[dependencies]

sdl2 = "0.2.1"
rand = "*"
num = "*"
# sdl2_ttf = "0.2.1"
# sdl2_gfx = "0.2.1"

[dependencies.sdl2_gfx]
git = "https://github.com/andelf/rust-sdl2_gfx/"

[dependencies.sdl2_ttf]
git = "https://github.com/andelf/rust-sdl2_ttf/"
