[package]

name = "game2048"
description = "2048 game in Rust"
repository = "https://github.com/andelf/rust-2048"
version = "0.0.4"
license = "MIT"
authors = [ "ShuYu Wang <andelf@gmail.com>" ]
keywords = [ "game", "2048", "SDL2" ]

[[bin]]

name = "game2048"
path = "src/main.rs"

[dependencies]

sdl2 = "^0.4"
rand = "^0.3"
num = "^0.1"
sdl2_ttf = "^0.4"
sdl2_gfx = "^0.4"
